# linrec

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
eval/: add_linrec_to_path.py  bench.py  debug.py  func_attrs.py  test.py  tune.py  utils.py
linrec/: __init__.py  ops.py
linrec/impl/cuda/: build.py  cuhelpers.cuh  dispatch.h  executable.cpp  extension.cpp  linrec.h  linrec_pipe.cu  linrec_pipe.cuh  linrec_ref.cu  linrec_ref.cuh  linrec_tile.cu  linrec_tile.cuh  memio.cuh  ops.py  utils.cuh
linrec/impl/python/: ops.py
linrec/impl/triton/: ops.py
