# https://packaging.python.org/en/latest/guides/modernize-setup-py-project/#should-pyproject-toml-be-added
[build-system]
requires = [
    "setuptools",
    "torch",
    "ninja",
    "nvidia-cuda-runtime-cu12"
]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 130
[tool.ruff.format]
quote-style = "single"
[tool.ruff.lint.isort]
combine-as-imports = true